--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,8 @@
         <tfoot>
         </tfoot>
     </table>
-    
+    <script src="app/domain/negociacao/Negociacao.js"></script>
+    <script src="app/controllers/NegociacaoController.js"></script>
+    <script src="app/app.js"></script>
 </body>
 </html>
