--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,8 @@
     <br>
     
     <div id="negociacoes"></div> 
+    <script src="app/util/ProxyFactory.js"></script>
+    <script src="app/util/Bind.js"></script>
     <script src="app/domain/negociacao/Negociacao.js"></script>
     <script src="app/controllers/NegociacaoController.js"></script>
     <script src="app/ui/converters/DateConverter.js"></script>
