--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>
+            <input type="text" id="data" class="form-control" required autofocus/>
         </div>
 
         <div class="form-group">
