--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,8 @@
     <script src="app/ui/views/NegociacoesView.js"></script> 
     <script src="app/ui/models/Mensagem.js"></script>
     <script src="app/ui/views/MensagemView.js"></script>
+    <script src="app/util/ApplicationException.js"></script>
+    <script src="app/ui/converters/DataInvalidaException.js"></script>
     <script src="app/app.js"></script> 
 </body>
 
