--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
     <script src="app/util/ProxyFactory.js"></script>
     <script src="app/util/Bind.js"></script>
     <script src="app/domain/negociacao/Negociacao.js"></script>
+    <script src="app/domain/negociacao/NegociacaoService.js"></script>
     <script src="app/controllers/NegociacaoController.js"></script>
     <script src="app/ui/converters/DateConverter.js"></script>
     <script src="app/domain/negociacao/Negociacoes.js"></script>
